# matrix

./: .gitignore  CMakeLists.txt  matrix.c  matrix.h
src/: call.h  cmath.h  generics.h  matrix.c  matrix.h  vector.c  vector.h
test/: matrix_test.c
